// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`otel > QueryBuilder subscription - async iterator 1`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "LiveStore.subscribe",
          "attributes": {
            "queryLabel": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
          },
          "children": [
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "subscribe-initial-run:undefined",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 0,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 0,
                  },
                },
              ],
            },
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "commit",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 1,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 1,
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > QueryBuilder subscription - async iterator 2`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > QueryBuilder subscription - async iterator with skipInitialRun 1`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
        {
          "_name": "@livestore/common:LeaderSyncProcessor:push",
          "attributes": {
            "batch": "undefined",
            "batchSize": 1,
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "LiveStore.subscribe",
          "attributes": {
            "queryLabel": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
          },
          "children": [
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "subscribe-initial-run:undefined",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 0,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 0,
                  },
                },
              ],
            },
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "commit",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 1,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 1,
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > QueryBuilder subscription - async iterator with skipInitialRun 2`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > QueryBuilder subscription - basic functionality 1`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "LiveStore.subscribe",
          "attributes": {
            "queryLabel": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
          },
          "children": [
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "subscribe-initial-run:undefined",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 0,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 0,
                  },
                },
              ],
            },
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "commit",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 1,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 1,
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > QueryBuilder subscription - basic functionality 2`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > QueryBuilder subscription - direct table subscription 1`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "LiveStore.subscribe",
          "attributes": {
            "queryLabel": "SELECT * FROM 'todos'",
          },
          "children": [
            {
              "_name": "db:SELECT * FROM 'todos'",
              "attributes": {
                "livestore.debugRefreshReason": "subscribe-initial-run:undefined",
                "sql.query": "SELECT * FROM 'todos'",
                "sql.rowsCount": 0,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos'",
                    "sql.rowsCount": 0,
                  },
                },
              ],
            },
            {
              "_name": "db:SELECT * FROM 'todos'",
              "attributes": {
                "livestore.debugRefreshReason": "commit",
                "sql.query": "SELECT * FROM 'todos'",
                "sql.rowsCount": 1,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos'",
                    "sql.rowsCount": 1,
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > QueryBuilder subscription - direct table subscription 2`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > QueryBuilder subscription - skipInitialRun 1`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "LiveStore.subscribe",
          "attributes": {
            "queryLabel": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
          },
          "children": [
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "subscribe-initial-run:undefined",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 0,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 0,
                  },
                },
              ],
            },
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "commit",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 1,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 1,
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > QueryBuilder subscription - skipInitialRun 2`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > QueryBuilder subscription - unsubscribe functionality 1`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "LiveStore.subscribe",
          "attributes": {
            "queryLabel": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
          },
          "children": [
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "subscribe-initial-run:undefined",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 0,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 0,
                  },
                },
              ],
            },
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "commit",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 1,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 1,
                  },
                },
              ],
            },
          ],
        },
        {
          "_name": "LiveStore.subscribe",
          "attributes": {
            "queryLabel": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
          },
          "children": [
            {
              "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
              "attributes": {
                "livestore.debugRefreshReason": "commit",
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 1,
              },
              "children": [
                {
                  "_name": "sql-in-memory-select",
                  "attributes": {
                    "sql.cached": false,
                    "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                    "sql.rowsCount": 1,
                  },
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > QueryBuilder subscription - unsubscribe functionality 2`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > otel 3`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "db:select * from todos",
          "attributes": {
            "sql.query": "select * from todos",
            "sql.rowsCount": 0,
          },
          "children": [
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "select * from todos",
                "sql.rowsCount": 0,
              },
            },
          ],
        },
        {
          "_name": "db:select * from todos",
          "attributes": {
            "sql.query": "select * from todos",
            "sql.rowsCount": 1,
          },
          "children": [
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "select * from todos",
                "sql.rowsCount": 1,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > otel 4`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > with thunks 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [],
    },
    {
      "_tag": "ref",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:app",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [],
    },
  ],
  "deferredEffects": [],
  "effects": [],
}
`;

exports[`otel > with thunks 3`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [],
    },
    {
      "_tag": "ref",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:app",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [],
    },
  ],
  "deferredEffects": [],
  "effects": [],
}
`;

exports[`otel > with thunks 4`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [],
    },
    {
      "_tag": "ref",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:app",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [],
    },
  ],
  "deferredEffects": [],
  "effects": [],
}
`;

exports[`otel > with thunks 6`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [],
    },
    {
      "_tag": "ref",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:app",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [],
    },
  ],
  "deferredEffects": [],
  "effects": [],
}
`;

exports[`otel > with thunks 7`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "db:select * from todos where completed = 0",
          "attributes": {
            "sql.query": "select * from todos where completed = 0",
            "sql.rowsCount": 0,
          },
          "children": [
            {
              "_name": "js:where-filter",
            },
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "select * from todos where completed = 0",
                "sql.rowsCount": 0,
              },
            },
          ],
        },
        {
          "_name": "db:select * from todos where completed = 0",
          "attributes": {
            "sql.query": "select * from todos where completed = 0",
            "sql.rowsCount": 1,
          },
          "children": [
            {
              "_name": "js:where-filter",
            },
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "select * from todos where completed = 0",
                "sql.rowsCount": 1,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > with thunks 8`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;

exports[`otel > with thunks with query builder and without labels 3`] = `
{
  "_name": "createStore",
  "attributes": {
    "debugInstanceId": "test",
    "storeId": "default",
  },
  "children": [
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "
      PRAGMA page_size=32768;
      PRAGMA cache_size=10000;
      PRAGMA synchronous='OFF';
      PRAGMA temp_store='MEMORY';
      PRAGMA foreign_keys='ON'; -- we want foreign key constraints to be enforced
    ",
      },
    },
    {
      "_name": "makeClientSessionSyncProcessor",
    },
    {
      "_name": "client-session-sync-processor:boot",
      "children": [
        {
          "_name": "client-session-sync-processor:pull",
          "attributes": {
            "span.label": "⚠︎ Interrupted",
            "status.interrupted": true,
          },
        },
      ],
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
      },
    },
    {
      "_name": "livestore.in-memory-db:execute",
      "attributes": {
        "sql.query": "RELEASE SAVEPOINT livestore_savepoint_<id>",
      },
    },
    {
      "_name": "LiveStore:commits",
    },
    {
      "_name": "LiveStore:queries",
      "children": [
        {
          "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
          "attributes": {
            "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
            "sql.rowsCount": 0,
          },
          "children": [
            {
              "_name": "js:() => ({ completed: false })",
            },
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 0,
              },
            },
          ],
        },
        {
          "_name": "db:SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ",
          "attributes": {
            "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
            "sql.rowsCount": 1,
          },
          "children": [
            {
              "_name": "js:() => ({ completed: false })",
            },
            {
              "_name": "sql-in-memory-select",
              "attributes": {
                "sql.cached": false,
                "sql.query": "SELECT * FROM 'todos' WHERE "completed" = ? LIMIT ?",
                "sql.rowsCount": 1,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`otel > with thunks with query builder and without labels 4`] = `
[
  {
    "_name": "LiveStore:commit",
    "attributes": {
      "livestore.eventTags": "[
  "todo.created"
]",
      "livestore.eventsCount": 1,
    },
    "children": [
      {
        "_name": "client-session-sync-processor:encode-events",
      },
      {
        "_name": "client-session-sync-processor:materialize-events",
        "children": [
          {
            "_name": "client-session-sync-processor:materialize-event",
            "children": [
              {
                "_name": "livestore.in-memory-db:execute",
                "attributes": {
                  "sql.query": "INSERT INTO 'todos' ("id", "text", "completed") VALUES (?, ?, ?)",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "0",
  "1",
  "2"
]",
                  "span.label": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                  "sql": "DELETE FROM __livestore_materialization_journal
                            WHERE (seqNumGlobal, seqNumClient, seqNumRebaseGeneration) IN ((?, ?, ?))",
                },
              },
              {
                "_name": "@livestore/common:execSqlPrepared",
                "attributes": {
                  "bindValueKeys": "[
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration",
  "$changeset"
]",
                  "span.label": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                  "sql": "INSERT INTO __livestore_materialization_journal (seqNumGlobal, seqNumClient, seqNumRebaseGeneration, changeset) VALUES ($seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration, $changeset)",
                },
              },
              {
                "_name": "@livestore/common:execSql",
                "attributes": {
                  "bindValueKeys": "[
  "$id",
  "$seqNumGlobal",
  "$seqNumClient",
  "$seqNumRebaseGeneration"
]",
                  "span.label": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                  "sql": "INSERT OR REPLACE INTO __livestore_state_head (id, seqNumGlobal, seqNumClient, seqNumRebaseGeneration) VALUES ($id, $seqNumGlobal, $seqNumClient, $seqNumRebaseGeneration)",
                },
              },
            ],
          },
        ],
      },
      {
        "_name": "client-session-sync-processor:push",
        "attributes": {
          "batchSize": 1,
          "eventCounts": "{
  "todo.created": 1
}",
          "mergeResultTag": "advance",
        },
      },
    ],
  },
]
`;
